# ontoshacl

./: .gitignore  README.md  Taskfile.yaml  config.json  config_full.json  example_config.json  ontoshacl.py  pyproject.toml  todo.md
example_data/: rico-data.ttl  rico-shacl.ttl  sosa-shacl.ttl  time-shacl.ttl
ontoshacl/: __init__.py  __main__.py  config.py  core.py
tests/: config.json  test-minimal-config.json  test-rico-config.json  test-rico-minimal-config.json  test_config.py
tests/data/: rico-invalid.ttl  rico-valid-with-inference.ttl
tests/ontologies/: minimal-test.ttl  rico-minimal.ttl
