[project]
name = "ontoshacl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rdflib>=7.5.0",
]

[dependency-groups]
dev = [
    "pyshacl>=0.30.1",
    "black>=25.12.0",
    "isort>=7.0.0",
    "ruff>=0.14.11",
    "pytest>=9.0.2",
]

[project.scripts]
ontoshacl = "ontoshacl:cli"

[tool.isort]
profile = "black"
